--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: npm install semantic plugins
-        run: npm install @semantic-release/changelog @semantic-release/git
+        run: npm install @semantic-release/changelog @semantic-release/git @semantic-release/exec
       - name: Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.DAV_TOKEN }}
